force-app/main/default/main/default/objects/Selected_Offer__c/Selected_Offer__c.object-meta.xml
<CustomObject>
    <label>Selected Offer</label>
    <nameField>
        <displayFormat>SO-{000}</displayFormat>
        <label>Selected Offer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selected Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>