force-app/main/default/main/default/objects/Selected_Offer__c/fields/Covered_Individual__c.field-meta.xml
<CustomField>
    <fullName>Covered_Individual__c</fullName>
    <label>Covered Individual</label>
    <referenceTo>Benefit_Individual__c</referenceTo>
    <relationshipLabel>Selected Offers</relationshipLabel>
    <relationshipName>Selected_Offers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>