force-app/main/default/main/default/objects/Selected_Offer__c/fields/Covered_Person__c.field-meta.xml
<CustomField>
    <fullName>Covered_Person__c</fullName>
    <formula>Covered_Individual__r.First_Name__c + &apos; &apos; +  Covered_Individual__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Covered Person</label>
    <type>Text</type>
</CustomField>