force-app/main/default/main/default/objects/Selected_Offer__c/fields/Employee_Cost__c.field-meta.xml
<CustomField>
    <fullName>Employee_Cost__c</fullName>
    <formula>Plan__r.Monthly_Employee_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>