force-app/main/default/main/default/objects/Selected_Offer__c/fields/Plan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Start_Date__c</fullName>
    <formula>Plan__r.Coverage_Period__r.Coverage_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Start Date</label>
    <type>Date</type>
</CustomField>