force-app/main/default/main/default/objects/Selected_Offer__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <formula>Plan__r.Plan_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Type</label>
    <type>Text</type>
</CustomField>