force-app/main/default/main/default/objects/Selected_Offer__c/validationRules/Covered_Individual_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Covered_Individual_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Covered_Individual__c)</errorConditionFormula>
    <errorMessage>Covered Individual is required.</errorMessage>
</ValidationRule>